--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
-
-
-
 .App {
   text-align: center;
 }
@@ -39,4 +36,71 @@
   to {
     transform: rotate(360deg);
   }
+}
+.bestProduct {
+  background-color:#DB7090;
+  animation:  clignote 2s linear infinite;
+  
+}
+@keyframes clignote {  
+  50% { opacity: 0.5; }
+}
+
+media (min-width: 1025px) {
+  .h-custom {
+    height: 100vh !important;
+  }
+}
+
+
+.number-input.number-input {
+  border: 1px solid #ced4da;
+  width: 3rem;
+  border-radius: .25rem;
+}
+
+
+.shopping-cart .def-number-input.number-input {
+  border: none;
+}
+
+.RemoveCart {
+  background: white;
+  color: red;
+  font-size: 1.1em;
+  margin: 1em;
+  padding: 0.25em 1em;
+  border: 2px solid red;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.AddItem {
+  /* Adapt the colors based on primary prop */
+  background: white;
+  color: green;
+  font-size: 1.1em;
+  margin: 1em;
+  padding: 0.25em 1em;
+  border: 2px solid green;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.RemoveItem {
+  /* Adapt the colors based on primary prop */
+  background: white;
+  color: red;
+  font-size: 1.1em;
+  margin: 1em;
+  padding: 0.25em 1em;
+  border: 2px solid red;
+  border-radius: 20px;
+  cursor: pointer;
+
+}
+
+.RemoveItem:hover .AddItem:hover {
+  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.16);
+  transform: translate(0, -5px);
 }
